--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropdown": "^1.9.2",
     "react-scripts": "4.0.3",
     "react-uid": "^2.3.1",
     "uuid": "^8.3.2",
