--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-uid": "^2.3.1",
     "uuid": "^8.3.2",
