--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
+    "react-hook-form": "^7.13.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
